--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -1,18 +1,13 @@
-<div>
-    {{pagination}}
-</div>
-
 {{#foreach posts}}
 <article class="{{post_class}}">
     <header>
         <h2><a href="{{url}}">{{title}}</a></h2>
     </header>
     <section>
-        <p>{{excerpt words="26"}} <a href="{{url}}">&raquo;</a></p>
+        <p><a href="{{url}}">{{excerpt words="26"}}</a></p>
     </section>
     <footer>
-        {{#if author.image}}<img src="{{author.image}}" alt="{{author.name}}" />{{/if}}
-        {{author}}
+        {{#if author.profile_image}}<img src="{{author.profile_image}}" alt="{{author.name}}" />{{/if}}
         {{tags prefix=" on "}}
         <time datetime="{{date format="YYYY-MM-DD"}}">{{date format="DD MMMM YYYY"}}</time>
     </footer>
