--- a/post.hbs
+++ b/post.hbs
@@ -6,7 +6,7 @@
 {{!-- Everything inside the #post tags pulls data from the post --}}
 {{#post}}
 
-<section class="post-full-content">
+<section class="sw-post-content u-main-spacer">
   {{content}}
 </section>
 {{/post}}
