--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -3,10 +3,8 @@
     <h1><a href="{{@blog.url}}">수학교육웹진</a></h1>
   </div>
   <ul class="sw-site-menu menu">
-    {{#get "tags" limit="all"}}
-      {{#foreach tags}}
-        <li><a href="{{url}}" class="sw-site-menu__link tag tag-{{slug}}">{{name}}</a></li>
-      {{/foreach}}
-    {{/get}}
+    {{#get "tags" limit="all"}} {{#foreach tags}}
+    <li><a href="{{url}}" class="sw-site-menu__link tag tag-{{slug}}">{{name}}</a></li>
+    {{/foreach}} {{/get}}
   </ul>
 </header>
