link에 post.css와 연동이 안 돼서 추가했습니다.

--- a/default.hbs
+++ b/default.hbs
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="{{asset "util.css"}}">
   <link rel="stylesheet" href="{{asset "ghost-hack.css"}}">
   <link rel="stylesheet" href="{{asset "main.css"}}">
+  <link rel="stylesheet" href="{{asset "post.css"}}">
   {{ghost_head}}
 </head>
 
