나눔글꼴 추가 및 들여쓰기 수정

--- a/assets/post.css
+++ b/assets/post.css
@@ -1,15 +1,24 @@
 @font-face {
   font-family: '1훈새마을운동R';
   src: url('fonts/HoonSaemaulundongR.ttf');
+  font-family: '나눔고딕';
+  src: url('fonts/NanumGothic.ttf');
+  font-family: '나눔고딕B';
+  src: url('fonts/NanumGothicBlod.ttf');
+  font-family: '나눔고딕EB';
+  src: url('fonts/NanumGothicExtraBold.ttf');
+  font-family: '나눔고딕L';
+  src: url('fonts/NanumGothicLight.ttf');
 }
+
 .sw-post-content h1, h2, h3, p, li, ol, ul{
-font-family: '1훈새마을운동R';
-background: 0;
-    border: 0;
-    margin: 0;
-    padding: 0;
-    vertical-align: baseline;
-    outline: 0;
+  font-family: '1훈새마을운동R';
+  background: 0;
+  border: 0;
+  margin: 0;
+  padding: 0;
+  vertical-align: baseline;
+  outline: 0;
 
 
 }
@@ -30,36 +39,34 @@ background: 0;
 }
 
 .sw-post-content h3 {
-    font-size: 23px;
-    line-height: 40px;
-    font-style: normal;
-    font-weight: 600;
-    letter-spacing: -2px;
-    text-transform: capitalize;
+  font-size: 23px;
+  line-height: 40px;
+  font-style: normal;
+  font-weight: 600;
+  letter-spacing: -2px;
+  text-transform: capitalize;
 }
 
 .sw-post-content p {
   color: #444444;
-      font-size: 17px;
-    line-height: 30px;
-    font-style: normal;
-    font-weight: 400;
-    margin-bottom: 22px;
+  font-size: 17px;
+  line-height: 30px;
+  font-style: normal;
+  font-weight: 400;
+  margin-bottom: 22px;
 }
 
-
-
 .sw-post-content a {
-    color: #ababab;
-    line-height: inherit;
-    text-decoration: none;
-    cursor: pointer;
+  color: #ababab;
+  line-height: inherit;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 .sw-post-content a:hover {
-    color: #1abc9c;
+  color: #1abc9c;
 }
 
 .sw-post-content a:visited {
-    color: #9900ff;
+  color: #9900ff;
 }
