--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -1,6 +1,6 @@
 <header class="sw-site-header u-main-spacer">
   <div class="sw-logo-container">
-    <h1><a href="{{@blog.url}}">수학교육웹진</a></h1>
+    <h1><a href="{{@blog.url}}"><img src="../img/mainlogo.png" alt=""></a></h1>
   </div>
   <ul class="sw-site-menu menu">
     {{#get "tags" limit="all"}}
