--- a/default.hbs
+++ b/default.hbs
@@ -23,10 +23,12 @@
     $(document).foundation();
   </script>
   {{ghost_foot}}
-  <div class="u-main-spacer sw-footer ">
-    <img src="http://mathed.snu.ac.kr/sites/mathed.snu.ac.kr/files/%ED%91%B8%ED%84%B0%EB%B2%A0%EC%9D%B4%EC%A7%81%EB%A1%9C%EA%B3%A0.png" alt="" >
-    <p>서울대학교 수학교육센터<br>
-    08826 서울시 관악구 관악로1 서울대학교 사범대학 수학교육과 TEL:02-880-7737 | FAX:02-889-1747</p>
+  <div class="sw-footer">
+    <div class="u-main-spacer" >
+    <a href="http://mathed.snu.ac.kr/" target="_blank"><img class="sw-footer-logo" src="{{asset 'assets/img/footer_main.png'}}" alt=""></a><br>
+    08826 서울시 관악구 관악로1 서울대학교 사범대학 수학교육과 TEL:<a href="telto:02-880-7737">02-880-7737</a> | FAX:02-889-1747<br>
+    문의 메일 : <a href="">웹진이름</a> | 글 게시 관련 문의 : <a href="mailto:webzine.post@gmail.com">webzine.post@gmail.com</a>
+    </div>
   </div>
 </body>
 </html>
