--- a/assets/main.css
+++ b/assets/main.css
@@ -34,7 +34,7 @@ BEM 방법론 링크: https://medium.com/witinweb/css-%EB%B0%A9%EB%B2%95%EB%A1%A
 */
 
 body {
-  margin: 30px 0;
+  margin-top: 30px;
 }
 
 .sw-logo-container {
