--- a/author.hbs
+++ b/author.hbs
@@ -11,6 +11,15 @@
 {{!-- The main content area on the homepage --}}
 <main class="content" role="main">
 
+    {{#foreach posts}}
+    <h2><a href="{{url}}">{{title}}</a></h2>
+
+   <p>{{excerpt words="26"}}</p>
+
+    {{!-- Here `published_at` is set, so this will show the article date --}}
+    <time datetime="{{date format="YYYY-MM-DD"}}">{{date format="DD MMMM YYYY"}}</time>
+   {{/foreach}}
+
     {{!-- The tag below includes the post loop - partials/loop.hbs --}}
     {{> "loop"}}
 
