--- a/default.hbs
+++ b/default.hbs
@@ -15,13 +15,17 @@
 
 <body class="{{body_class}}">
   {{> header}}
+    <style type="text/css">
+      body{font-family: 나눔고딕}
+    </style>
   <main>
     {{{body}}}
+
   </main>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.1/js/foundation.min.js"></script>
   <script>
-    $(document).foundation();
+    $(document).();
   </script>
   {{ghost_foot}}
   <div class="sw-footer">
