--- a/default.hbs
+++ b/default.hbs
@@ -22,13 +22,13 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.1/js/foundation.min.js"></script>
   <script>
-    $(document).();
+    $(document).foundation();
   </script>
   {{ghost_foot}}
   <div class="sw-footer">
     <div class="u-main-spacer" >
     <a href="http://mathed.snu.ac.kr/" target="_blank"><img class="sw-footer-logo" src="{{asset 'assets/img/footer_main.png'}}" alt=""></a><br>
-    08826 서울시 관악구 관악로1 서울대학교 사범대학 수학교육과 TEL:<a href="tel:02-880-7737">02-880-7737</a> | FAX:<a href="fax:02-889-1747">02-889-1747</a><br>
+    08826 서울시 관악구 관악로1 서울대학교 사범대학 수학교육과 <br class="u-mobile-linebreak"> TEL <a href="tel:02-880-7737">02-880-7737</a> | FAX <a href="fax:02-889-1747">02-889-1747</a><br>
     문의 메일 : <a href="mailto:snume.emazine@gmial.com">snume.emazine@gmail.com</a> |<br>
     글 게시 관련 문의 : <a href="mailto:webzine.post@gmail.com">webzine.post@gmail.com</a>
     </div>
