--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -1,6 +1,6 @@
 <header class="sw-site-header u-main-spacer">
-  <div class="sw-logo-container">
-    <h1><a href="{{@blog.url}}"><img src="{{asset 'img/emazine_blue.png'}}" alt=""></a></h1>
+  <div class="sw-logo">
+    <a class="sw-logo__link" href="{{@blog.url}}"><img class="sw-logo__img" src="{{asset 'img/emazine_blue.png'}}" alt=""></a>
   </div>
 
   <div class="sw-site-menumobile" data-responsive-toggle="example-menu" data-hide-for="medium">
