--- a/assets/post.css
+++ b/assets/post.css
@@ -1,26 +1,20 @@
-.sw-post-content h1, h2, h3, p, li, ol, ul{
-  background: 0;
-  border: 0;
-  margin: 0;
-  padding: 0;
-  vertical-align: baseline;
-  outline: 0;
+.sw-post-title {
+  margin-top: 20px;
+}
 
+.sw-post-content {
+  margin-top: 30px;
 }
 
 .sw-post-content h1 {
   font-size: 70px;
-  letter-spacing: -5.25px;
   font-weight: 600;
-  text-transform: uppercase;
 }
 
 .sw-post-content h2 {
   font-size: 40px;
-  letter-spacing: -3px;
   font-weight: 600;
-  line-height: 1.384615384615385em;
-  text-transform: capitalize;
+  line-height: 1.38;
 }
 
 .sw-post-content h3 {
@@ -28,21 +22,21 @@
   line-height: 40px;
   font-style: normal;
   font-weight: 600;
-  letter-spacing: -2px;
-  text-transform: capitalize;
 }
 
 .sw-post-content p {
-  color: #444444;
+  color: #333;
   font-size: 17px;
   line-height: 30px;
   font-style: normal;
   font-weight: 400;
   margin-bottom: 22px;
+  text-align: justify;
+  word-break: keep-all;
 }
 
 .sw-post-content a {
-  color: #ababab;
+  color: #555;
   line-height: inherit;
   text-decoration: none;
   cursor: pointer;
@@ -54,4 +48,16 @@
 
 .sw-post-content a:visited {
   color: #9900ff;
+}
+
+.sw-post-date {
+  color: lightgray;
+}
+
+@media (max-width: 1000px) {
+  .sw-post-title,
+  .sw-post-content,
+  .sw-post-meta {
+    padding: 0 20px;
+  }
 }
